@@ -17,6 +17,10 @@ Version 1.12-9 (opened April 6, 2008)
 	* summary.cca: contributions of eigenvalues accumulated for
 	constrained and unconstrained axes, and separately (new) for
 	constrained axes. 
+
+	* allPerms: Now accepts a vector from which number of observations 
+	can be deduced. This was the intended behaviour but allPerms failed
+	in such cases.
 	
 Version 1.12-8 (closed April 6, 2008)
 
